# penelitian1

./: README.md
Benchmark/impl/python/: matmul.py  prodcons.py  sort.py
Experiment/benchmark/src_go/: matmul.go  parallel_sort.go  prod_cons.go
Experiment/benchmark/src_java/: Matmul.java  ParallelSort.java  ProdCons.java
Experiment/benchmark/src_python/: matmul.py  parallel_sort.py  prodcons.py
Experiment/benchmark/src_rust/: Cargo.toml  matmul.rs  parallel_sort.rs  prod_cons.rs
Experiment/benchmark/src_rust/src/: matmul.rs  parallel_sort.rs  prod_cons.rs
Experiment/config/: experiment.yaml
Experiment/log/: variability.py
Experiment/log/Calculation/: analysis.py  analysis_test.py  comparative.py  median.py  scatterplot.py
Experiment/log/phase1/: log_phase1.txt  phase1.csv  phase1.jsonl  phase1_median.csv  phase1_processed.csv
Experiment/log/phase2/: log_phase2.txt  phase2.csv  phase2.jsonl  phase2_median.csv  phase2_processed.csv  phase2_processed_full.csv
Experiment/scripts/: cleanup_all.sh  run_phase1.sh  run_phase2.sh
Format Publisher/Draft/: An Experimental Performance Evaluation of Concurrency and Parallelism in Modern Programming Languages.docx  JurnalJernil.docx
Format Publisher/Template/: Template JoCoSiR v.1.0.docx
Format UPN/Proposal/: PROPOSAL PENELITIAN.docx
Reference/: Cite.bib  ref.bib
